Fix font sizes on mobile with meta tag

--- a/html/style.css
+++ b/html/style.css
@@ -2,7 +2,6 @@ body {
     /* background-color: lightslategrey; */
     margin: 0;
     font-family: Helvetica, Arial, sans-serif;
-    font-size: x-large;
 }
 
 #contents {
@@ -19,7 +18,6 @@ header {
     padding: 8px;
     min-height: 1.5em;
     border-bottom: 1px solid lightgray;
-    font-size: large;
 }
 
 select {
@@ -27,10 +25,6 @@ select {
     border: none;
     border-radius: 4px;
     background-color: #f1f1f1;
-}
-
-.ts-dropdown, .ts-control, .ts-control input {
-    font-size: large !important;
 }
 
 table.relatives {
